feat(bitcoin): add taproot P2TR, HTLC, and Esplora client
Implement Bitcoin transaction construction for A2L swaps on regtest:
- Taproot: P2TR output creation, CSV refund script path, keypath sighash,
  witness construction, taproot key tweaking, spending tx builder
- HTLC: baseline hash-locked contract for linkability comparison
- Esplora: REST client for Nigiri (broadcast, UTXOs, confirmation polling)
- Funding: Nigiri faucet + Bitcoin Core RPC block mining

28 unit tests covering P2TR construction, sighash determinism,
HTLC script correctness, Esplora client config, taproot key-path signing.

Co-Authored-By: cristiansolutchak <cristiansolutchak@gmail.com>
Co-Authored-By: caarloshenriq <rickhenriquetab@gmail.com>
Co-Authored-By: IsaqueFranklin <isaquefrankli@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/cl-crypto",
     "crates/adaptor",
     "crates/protocol",
+    "crates/bitcoin",
 ]
 
 [workspace.dependencies]
