test(protocol): add regtest integration test for on-chain A2L swap
Full on-chain A2L swap integration test exercising:
funding via Nigiri faucet, P2TR transaction building, real taproot
sighash computation, A2L protocol with tweaked keys, Esplora
broadcast, confirmation polling, and unlinkability verification.

Test is #[ignore] since it requires a running Nigiri instance.

Co-Authored-By: cristiansolutchak <cristiansolutchak@gmail.com>
Co-Authored-By: caarloshenriq <rickhenriquetab@gmail.com>
Co-Authored-By: IsaqueFranklin <isaquefrankli@gmail.com>

--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -13,3 +13,9 @@ serde.workspace = true
 anyhow.workspace = true
 thiserror.workspace = true
 rand.workspace = true
+
+[dev-dependencies]
+tortuga-bitcoin = { path = "../bitcoin" }
+bitcoin.workspace = true
+tokio.workspace = true
+hex.workspace = true
